Alembic crash #65901

Closed
opened 2019-06-18 11:55:14 +02:00 by terry · 6 comments

System Information
Operating system: Windows-10-10.0.10586 64 Bits
Graphics card: Intel(R) GTX 860M/HD Graphics 4600 Intel 4.3.0 - Build 20.19.15.4624

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-17 21:07, hash: 741641f4c3
Worked: (optional)

Short description of error
On loading an Alembic cache, loaded ok, soon as i started to scrub timeline, it crashed, tried on 3 different machines, same happened.

Exact steps for others to reproduce the error
load alembic xxx.abc (saved from max)
on loading.
scrub timeline
crashes

**System Information** Operating system: Windows-10-10.0.10586 64 Bits Graphics card: Intel(R) GTX 860M/HD Graphics 4600 Intel 4.3.0 - Build 20.19.15.4624 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-17 21:07, hash: `741641f4c3` Worked: (optional) **Short description of error** On loading an Alembic cache, loaded ok, soon as i started to scrub timeline, it crashed, tried on 3 different machines, same happened. **Exact steps for others to reproduce the error** load alembic xxx.abc (saved from max) on loading. scrub timeline crashes
Author

Added subscriber: @sanger.terry

Added subscriber: @sanger.terry

Added subscriber: @MaciejJutrzenka

Added subscriber: @MaciejJutrzenka

can u uploud 10 frames of that alembic?

can u uploud 10 frames of that alembic?
Author

Uploaded crashed 4 times while scrubbing{F7133303}

Uploaded crashed 4 times while scrubbing{[F7133303](https://archive.blender.org/developer/F7133303/alembic.ABC)}
Sybren A. Stüvel self-assigned this 2019-06-18 14:44:49 +02:00

This issue was referenced by 4337bc2e63

This issue was referenced by 4337bc2e6303dbd5f295878f3e7490995a62713a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65901
No description provided.